--- a/.classpath
+++ b/.classpath
@@ -8,7 +8,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="H:/postgresql-42.2.9.jar">
+	<classpathentry kind="lib" path="C:/teamwork/MScIT_TeamProject_TemplateProject/lib/postgresql-42.2.9.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
