--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,14 @@
         <version>${dropwizard.version}</version>
     </dependency>
     
+    <!-- https://mvnrepository.com/artifact/io.dropwizard/dropwizard-assets -->
+<dependency>
+    <groupId>io.dropwizard</groupId>
+    <artifactId>dropwizard-assets</artifactId>
+    <version>${dropwizard.version}</version>
+</dependency>
+    
+    
     <!-- When hosting a website with dropwizard, we need to specify a language for writing views,
          In this case, we are using freemarker https://freemarker.apache.org/ -->
 	<dependency>
@@ -38,6 +46,13 @@
     	<artifactId>mysql-connector-java</artifactId>
     	<version>5.1.38</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/postgresql/postgresql -->
+<dependency>
+    <groupId>postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <version>9.1-901-1.jdbc4</version>
+</dependency>
+	
     
   </dependencies>
   
